Suggest users increase memory for android build
Fixes #3154 part 2 - this time the documentation for integrating existing projects
#3295 did the same but for the template so people get these settings by default